--- a/login/index.html
+++ b/login/index.html
@@ -22,8 +22,20 @@
 
     <div class="container-fluid">
         <div class="row min-vh-100">
-            <div class="col-9">
-                Column
+            <div class="col-9 d-flex justify-content-center align-items-center">
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="..." class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="col bg-custom form-login">
                 <h2 class="mt-custom text-center">Logar</h2>
@@ -46,7 +58,7 @@
                 </div>
                 <input class="btn btn-primary mt-4 d-block mx-auto" type="submit" value="Entrar">
 
-                <p class="mt-4">Esqueceu sua senha?<a href="#" class="link-underline-primary">Clique aqui.</a></p>
+                <p class="mt-4">Esqueceu sua senha?<a href="#" class="link-underline-primary"> Clique aqui.</a></p>
                 <p class="d-flex justify-content-end"><a href="#" class="link-underline-primary">Cadastre-se.</a></p>
 
 
