Add imagens carrossel

--- a/login/index.html
+++ b/login/index.html
@@ -26,13 +26,44 @@
                 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="..." class="d-block w-100" alt="...">
+
+                            <div class="d-block w-100 p-5 text-center">
+                                <img src="/imagens/programmer.png" class="img-fluid w-50" alt="programmer">
+                                <h4>Curiosidade</h4>
+                                <p>
+                                    Aproximadamente 90% dos ataques cibernéticos começam com uma tentativa de phishing.
+                                    Esse tipo de ataque continua a ser
+                                    uma das ameaças mais eficazes e usadas pelos cibercriminosos.
+                                </p>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <div class="d-block w-100 p-5 text-center">
+                                <img src="/imagens/secure_file.png" class="img-fluid w-50" alt="programmer">
+                                <h4>Curiosidade</h4>
+                                <p>
+                                    O "S" no "HTTPS" de URLs significa "Secure" (Seguro) e indica que a comunicação
+                                    entre o seu navegador e o site está
+                                    protegida por criptografia SSL/TLS. Isso impede que dados, como informações de
+                                    login, números de cartão de crédito, ou
+                                    outros dados pessoais, sejam interceptados e lidos por atacantes durante a
+                                    transmissão
+                                </p>
+                            </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="..." class="d-block w-100" alt="...">
+                            <div class="d-block w-100 p-5 text-center">
+                                <img src="/imagens/hacker.png" class="img-fluid w-50" alt="programmer">
+                                <h4>Curiosidade</h4>
+                                <p>
+                                    Links encurtados, como aqueles gerados por serviços como bit.ly ou tinyurl, podem
+                                    ser uma ameaça à segurança
+                                    cibernética. Embora sejam convenientes para compartilhar URLs longas, eles também
+                                    ocultam o destino real do link,
+                                    tornando-os uma ferramenta popular entre cibercriminosos para enganar usuários e
+                                    levá-los a sites maliciosos.
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -45,7 +76,7 @@
                         <input type="email" class="form-control" id="FormControlInput1"
                             placeholder="E-mail ou nome de usuário">
 
-                        <label for="inputPassword5" class="form-label mt-3">Password</label>
+                        <label for="inputPassword5" class="form-label mt-3">Senha</label>
                         <input type="password" id="inputPassword5" class="form-control"
                             aria-describedby="passwordHelpBlock" placeholder="Digite sua senha">
                     </div>
