Retira scaner de arquivos

--- a/home/index.html
+++ b/home/index.html
@@ -95,7 +95,7 @@
     <main>
         <div class="container mt-5">
             <div class="row">
-                <div class="col-md-6 url text-center d-column">
+                <div class="url text-center p-5">
                     <h3 class="border-bottom border-2">URL</h3>
                     <div class="mb-3">
                         <div class="input-group mt-5">
@@ -105,9 +105,10 @@
                         <div class="text-center mt-4">
                             <i class="bi bi-globe2 custom-icon-size"></i>
                         </div>
+                        <button type="submit" class="btn btn-primary mt-4">Enviar</button>
                     </div>
                 </div>
-
+                <!-- 
                 <div class="col-md-6  text-center file">
                     <h3 class="border-bottom border-2">Arquivo</h3>
                     <div>
@@ -117,7 +118,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
     </main>
 
     <div class="terms d-block mx-auto">
