--- a/home/index.html
+++ b/home/index.html
@@ -108,17 +108,9 @@
                         <button type="submit" class="btn btn-primary mt-4">Enviar</button>
                     </div>
                 </div>
-                <!-- 
-                <div class="col-md-6  text-center file">
-                    <h3 class="border-bottom border-2">Arquivo</h3>
-                    <div>
-                        <input class="form-control form-control-small mt-5" type="file">
-                        <div class="text-center mt-4">
-                            <i class="bi bi-file-earmark-break custom-icon-size"></i>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
+
+            </div>
+        </div>
     </main>
 
     <div class="terms d-block mx-auto">
@@ -179,7 +171,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
+    <script type="module" src="inputValue.js"></script>
 </body>
 
 </html>
