--- a/home/index.html
+++ b/home/index.html
@@ -100,7 +100,8 @@
                     <div class="mb-3">
                         <div class="input-group mt-5">
                             <input type="text" class="form-control" id="basic-url"
-                                aria-describedby="basic-addon3 basic-addon4" placeholder="Pesquisar ou escaneiar URL">
+                                aria-describedby="basic-addon3 basic-addon4" placeholder="Pesquisar ou escaneiar URL"
+                                required>
                         </div>
                         <div class="text-center mt-4">
                             <i class="bi bi-globe2 custom-icon-size"></i>
